--- a/app/src/main/res/layout/content_ogin.xml
+++ b/app/src/main/res/layout/content_ogin.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.kristina.lab1.oginActivity"
+    tools:context=".LoginActivity"
     tools:showIn="@layout/activity_ogin"
     android:weightSum="1"
     android:orientation="vertical">
@@ -25,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="login name" />
+        android:hint="login name"
+        android:id="@+id/email"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,6 +38,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button2" />
 
 
 </LinearLayout>
