--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -22,7 +22,19 @@
         android:id="@+id/button"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/startChat"
+        android:text="Send Button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
-
+<ListView
+    android:layout_width="wrap_content"
+    android:layout_height="@android:dimen/thumbnail_height"
+    android:id="@+id/listView"
+    android:layout_alignParentEnd="true">
+</ListView>
 
 </RelativeLayout>
